# clay-reader

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  main.cpp
.cache/clangd/index/: clay.h.10B578770D3A7E93.idx  clay_renderer_raylib.c.67A78D2052908969.idx  main.cpp.4DB6B3B89FA4F801.idx  raylib.h.BA7B1EB335963AF7.idx  raymath.h.0718F373C1A043A2.idx
